# onnxruntime-extensions

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .sscignore  CMakeLists.txt  CODEOWNERS  MANIFEST.in  README.md  ThirdPartyNotices.txt  azure-pipelines.yml  build-hardware-agnostic.bat  build.android  build.android_aar  build.bat  build.ios  build.ios_xcframework  build.sh  build_lib.bat  build_lib.sh  build_matrix.md  cgmanifest.json  ci_deps.sh  install_deps.bat  nenadtest.py  pyproject.toml  pysetup.ps1  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  validate_version.ps1  validate_version.py  vcpkg.json  vision.txt
.az/: android_packaging.yml  ios_packaging.yml  mshost.yaml  wheels.yml  wheels_macos.yml  wheels_win32.yml
.az/templates/: set-package-version-variable-step.yml
.config/: policheck_exclusions.xml  tsaoptions.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/workflows/: android-16kb-check.yml  gradle-wrapper-validation.yml  linux_arm64_wheel.yaml  linux_release_x86_64.yml  publish-python-apidocs.yml  stale-issue-handler.yml  wheels.yml
.pipelines/: OneBranch.Official.yml  OneBranch.PullRequest.yml  android_packaging.yml  ci.yml  ci_optional.yml  ios_packaging.yml  java_packaging.yml  nuget.yml  wheels_linux.yml  wheels_macos.yml  wheels_win32.yml
.pyproject/: backend.py  cmdclass.py  setup_cmds.py
base/: base64.h  env_string.h  file_sys.h  narrow.h  noexcep_operators_placeholder.cc  ocos.cc  ortx_common.h  status.cc  status.h  string_tensor.cc  string_tensor.h  string_utils.cc  string_utils.h  token_fwd.h  ustring.cc  ustring.h
ci_build/tools/: cmake_helper.py
cmake/: Sdl.ruleset  ext_apple_framework.cmake  ext_cuda.cmake  ext_imgcodecs.cmake  ext_java.cmake  ext_ortlib.cmake  ext_python.cmake  ext_tests.cmake  ext_wasm.cmake  noexcep_ops.cmake  ortcustom_python.cmake
docker/: README  README.md
docs/: How_to_write_custom_op.md  c_api.md  ci_matrix.md  custom_build.md  custom_ops.md  custom_text_ops.md  design.md  development.md  huggingface_compatibility.md  new_operator.md  pre_post_processing.md  pyop.md
examples/: gpt2_e2e.py
include/: ext_status.h  ocos.h  onnxruntime_cpp_api.hpp  onnxruntime_cpp_api_legacy.hpp  onnxruntime_extensions.h  op_def_struct.h  opdef_struct.h  opdef_struct.hpp  ort_c_to_cpp.h  ortx_cpp_helper.h  ortx_extractor.h  ortx_op_registry.h  ortx_processor.h  ortx_tokenizer.h  ortx_types.h  ortx_utils.h
includes/: custom_op_lite.h  exceptions.h  kernel_context.h  ocos.h  onnxruntime_cpp_api_legacy.hpp  onnxruntime_customop.hpp  onnxruntime_extensions.h  onnxruntime_f16.h  onnxruntime_no_customop.h  tensor_api.h
java/: README.md  build-android.gradle  build.gradle  gradlew  ortx_jni.def  ortx_jni.ver  settings-android.gradle  settings.gradle
nuget/: DummyNativeNuget.nuspec  NativeNuget.nuspec  README.md  WinOnlyNuget.nuspec
ocos/: base64.cc  base64.h  ocos.cc  ortcustomops.cc  ortcustomops.h  ortcustomops.lds  ortcustomops_pyd.def  sparse.hpp  string_tensor.cc  string_tensor.h  string_utils.cc  string_utils.h  utils.h
onnxruntime_customops/: __init__.py  _cuops.py  _ocos.py  _onnx_ops.py  _ortcustomops.pyi  eager_op.py  utils.py
onnxruntime_extensions/: __init__.py  _cuops.py  _extensions_pydll.pyi  _hf_cvt.py  _ocos.py  _ortapi2.py  _ortcustomops.pyi  _torch_cvt.py  _version.py  cmake_helper.py  cmd.py  compose.py  cvt.py  eager_op.py  generate_cmake_ops_list.py  pp_api.py  util.py
operators/: ocos.cc  ocos_operators_placeholder.cc  string_tensor.cc  string_tensor.h  string_utils.cc  string_utils.h  ustring.cc  ustring.h
prebuild/: build_curl_for_android.sh  build_curl_for_android_on_linux.patch  openssl_crypto_x509_android_hash.patch  readme.md
pyop/: extensions_pydll.def  py_c_api.cc  pyfunc.cc  pykernel.h
shared/: extensions.cc  extensions_c.def  ortcustomops.cc  ortcustomops.def  ortcustomops.exp  ortcustomops.h  ortcustomops.ver
test/: NuGet.config  _test_pp_api.py  codeconv.runsettings  nenadtest.py  packages.config  test_audio.py  test_audio_codec.py  test_audio_signal.py  test_autotokenizer.py  test_azure_ops.py  test_base64.cc  test_base64.h  test_bert_ops.py  test_bert_tokenizer.py  test_bert_tokenizer_decoder.py  test_bert_tokenizer_op.py  test_blingfire_sentencebreaker.py  test_bpe.py  test_bpe_tokenizer.py  test_cache_tokenizer.py  test_cliptok.py  test_cmake_helper.py  test_cv2.py  test_embedded_tokenizer.py  test_fast_tokenizer.py  test_gpt2tok.py  test_main.cc  test_masked_fill.py  test_math_ops.py  test_myrelu.py  test_mytorch.py  test_onnxprocess.py  test_ortcustomlib.cc  test_ortops.cc  test_performance.py  test_phi-4_audio.py  test_pp_api.py  test_processing.py  test_pyops.py  test_pyops_double.py  (+25 more)
text/: bbpetok.cc
tfmtok/: CMakeLists.txt  bpe_encoder.hpp  token_bpe.cc  tokenizer.h
tfmtok/c_api/: tfmtok_c.def
tfmtok/utils/: unescape.cc
tokenizer/: bert_tokenizer.cc  bert_tokenizer.hpp  gpt2_tokenizer.cc  gpt2_tokenizer.hpp  gpt2tok.cc  sentencepiece_tokenizer.cc  sentencepiece_tokenizer.hpp  string_normalizer.cc  string_normalizer.hpp  wordpiece_tokenizer.cc  wordpiece_tokenizer.hpp
tools/: add_pre_post_processing_to_model.py  android.package.sh  build.py  gen_customop_template.py  gen_selectedops.py  generate_unicode_category_table.py  get_vsdevcmd.ps1  hf_tokenizer_fetcher.py  install_deps.bat  install_deps.sh  run_android_emulator.py  run_android_test.py  test_cibuildwheel.bat  test_cibuildwheel.sh  upload_and_run_browserstack_tests.py
transformers/: inference_example.py  onnx_model_phi.py  optimize_GroupQueryAttention.py  shape_infer_helper.py
tutorials/: bert_cls.py  bert_customop.py  bert_e2e.py  bert_sentiment.py  cpp_custom_ops_tutorial.md  custom_ops_tutorial.ipynb  gen-ai_llama.py  gpt2_e2e.py  gpt2bs.py  hf_bert_e2e.py  imagenet_processing.ipynb  pytorch_custom_ops_tutorial.ipynb  requirements.txt  superresolution_e2e.py  supres_e2e.py  tf2onnx_custom_ops_tutorial.ipynb  whisper_e2e.py  yolo_e2e.py  yolov8_pose_e2e.py  yolov8_world_e2e.py
tutorials/ortx_api/: CMakeLists.txt  README.md
tutorials/ortx_api/src/: main.cc
(+877 files in other folders)
